--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="btn-group">
           <button id="btn-list" class="btn-2">
-            <img src="img/edit.svg" alt="Settings">
+            <img src="img/settings.svg" alt="Settings">
             <div class="text">Settings</div>
           </button>
         </div>
@@ -31,7 +31,7 @@
           <button type="button" id="btn-back-to-view" class="btn-1">
             <img src="img/back.svg" alt="back">
             <div class="text">
-              Back (<span class="countdown"></span>)
+              Home (<span class="countdown"></span>)
             </div>
           </button>
           <button id="btn-create" class="btn-2">
@@ -47,12 +47,12 @@
           <div class="date"></div>
         </div>
         <div class="btn-group">
-          <button type="button" id="btn-order-up" class="btn-1">
-            <!-- <img src="img/up.svg" alt="up"> -->
+          <button type="button" id="btn-order-up" class="btn-3">
+            <img src="img/up.svg" alt="up">
             <div class="text">Up</div>
           </button>
-          <button type="button" id="btn-order-down" class="btn-1">
-            <!-- <img src="img/down.svg" alt="down"> -->
+          <button type="button" id="btn-order-down" class="btn-3">
+            <img src="img/down.svg" alt="down">
             <div class="text">Down</div>
           </button>
           <button type="submit" id="btn-apply-order" class="btn-2">
