--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div id="view-header" class="header-container">
         <div class="logo-container">
-          <img src="img/logo.png" class="logo" alt="PHC Valeo">
+          <img src="img/logo.svg" class="logo" alt="PHC Valeo">
           <div class="date"></div>
         </div>
         <div class="btn-group">
